force-app/main/default/objects/Support_TSE_Product_List__c/Support_TSE_Product_List__c.object-meta.xml
<CustomObject>
    <description>Maintain a list of primary business to products for TSE requests</description>
    <label>Support TSE Product List</label>
    <nameField>
        <displayFormat>TSEP-{0000}</displayFormat>
        <label>TSEP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support TSE Product Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>