force-app/main/default/objects/Support_TSE_Product_List__c/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <label>Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety-Kleen</fullName>
                <label>SK ENV</label>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
            <value>
                <fullName>Performance Plus Products</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>Production Services</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>