force-app/main/default/objects/Support_TSE_Product_List__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line of Business</description>
    <label>Line of Business</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Support TSE Product Lists</relationshipLabel>
    <relationshipName>Support_TSE_Product_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>