force-app/main/default/objects/Support_TSE_Product_List__c/fields/Specialist_Business__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Business__c</fullName>
    <label>Specialist Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Specialist_Business</valueSetName>
    </valueSet>
</CustomField>