force-app/main/default/objects/Support_TSE_Product_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Business__c</columns>
    <columns>Specialist_Business__c</columns>
    <columns>Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>