force-app/main/default/objects/Support_TSE_Product_List__c/listViews/High_Hazardous_Services.listView-meta.xml
<ListView>
    <fullName>High_Hazardous_Services</fullName>
    <columns>NAME</columns>
    <columns>Primary_Business__c</columns>
    <columns>Specialist_Business__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Specialist_Business__c</field>
        <operation>equals</operation>
        <value>High Hazardous Services</value>
    </filters>
    <label>High Hazardous Services</label>
    <language>en_US</language>
</ListView>